apps/production/actual/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual-route
  namespace: actual
spec:
  hostnames:
    - budget.fanen.dk
